# INF326-2025-02.file-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  docker-compose.yml  filemeta.db  k8s-inf326-nyc1-kubeconfig.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  expose-and-dns.yml
alembic/: env.py
alembic/versions/: 0001_create_files_table.py
app/: __init__.py  config.py  db.py  events.py  main.py  models.py  schemas.py  storage.py  test_upload_from_main.txt  utils.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/core/: __init__.py  config.py  errors.py  events.py  security.py
app/domain/: __init__.py  models.py  policies.py
app/infra/: __init__.py
app/infra/db/: __init__.py
app/infra/messaging/: __init__.py
app/infra/storage/: __init__.py
app/routers/: files.py
app/services/: __init__.py
data/: filemeta.db
frontend/: .env.production  .gitignore  Dockerfile  README.md  app.js  index.html  package.json  styles.css  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: Channels.jsx  ChatWorkspace.jsx  Files.jsx  Messages.jsx  Search.jsx  Users.jsx
frontend/src/services/: api.js
gateway/: .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  requirements.txt  run.py
gateway/app/: client.py  config.py  main.py
gateway/app/routers/: channels.py  chatbots.py  files.py  messages.py  moderation.py  presence.py  search.py  threads.py  users.py
gateway/clients/: base.py  channels.py  chatbots.py  files.py  messages.py  moderation.py  presence.py  search.py  threads.py  users.py
gateway/routers/: channels.py  chatbots.py  files.py  messages.py  moderation.py  presence.py  search.py  threads.py  users.py
gateway/static/: app.js  index.html  styles.css
k8s/: configmap.yaml  deployment.yaml  frontend.yaml  gateway-configmap.yaml  gateway.yaml  hpa.yaml  ingress.yaml  minio.yaml  namespace.yaml  postgres.yaml  rabbitmq.yaml  secrets.yaml
migrations/: 001_create_files_table.sql
scripts/: README.md  build-and-push.ps1  cleanup.ps1  cost-analysis.ps1  create_db.py  deploy-gateway.ps1  deploy.ps1  generate-github-secrets.ps1  get-ip.ps1  guided-deploy.ps1  preflight-check.ps1  sleep.ps1  start-local.ps1  status.ps1  test-gateway.ps1  testfile.txt  upload_example.py  wake.ps1
tests/: README.md  conftest.py  test_api.py  test_files.py  test_health.py
